--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,4 @@ include_directories(${SQLITE3_INCLUDE_DIRS})
 
 add_executable(Notch src/main.cpp src/Database.cpp src/Database.h)
 message(STATUS ${SQLite3_LIBRARIES})
-target_link_libraries(Notch Qt5::Core Qt5::Widgets ${SQLite3_LIBRARIES})
+target_link_libraries(Notch Qt5::Core Qt5::Widgets SQLite3)
