--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Notch)
 set(CMAKE_CXX_STANDARD 20)
 
 #set(CMAKE_PREFIX_PATH "C:\\msys64\\mingw64")
-#set(Qt5_DIR "C:\\msys64\\mingw64\\lib\\cmake\\Qt5")
+set(Qt5_DIR "C:\\msys64\\mingw64\\lib\\cmake\\Qt5")
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
