--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,5 +16,6 @@ include_directories(${SQLITE3_INCLUDE_DIRS})
 
 add_executable(Notch src/main.cpp src/Database.cpp src/Database.h)
 message(STATUS ${SQLite3_INCLUDE_DIRS})
+message("CMAKE_FIND_LIBRARY_SUFFIXES: ${CMAKE_FIND_LIBRARY_SUFFIXES}")
 target_include_directories(Notch PRIVATE ${SQLite3_INCLUDE_DIRS})
 target_link_libraries(Notch Qt5::Core Qt5::Widgets SQLite3)
