--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.17)
 project(Notch)
 set(CMAKE_CXX_STANDARD 20)
 
-#set(CMAKE_PREFIX_PATH "C:\\msys64\\mingw64")
-set(CMAKE_PREFIX_PATH "C:\\msys64\\mingw64\\lib\\cmake\\Qt5")
+set(CMAKE_PREFIX_PATH "C:\\msys64\\mingw64")
+list(APPEND CMAKE_PREFIX_PATH "C:\\msys64\\mingw64\\lib\\cmake\\Qt5")
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
