Add SQLite troubleshooting messages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,14 @@ message("CMAKE_FIND_LIBRARY_SUFFIXES: ${CMAKE_FIND_LIBRARY_SUFFIXES}")
 find_package(Qt5 COMPONENTS Core Widgets REQUIRED)
 find_package(SQLite3 REQUIRED)
 
+if (SQLITE3_FOUND)
+    include_directories(${SQLITE3_INCLUDE_DIRS})
+else()
+    message("SQLite3 not found!")
+    message("SQLite3 include dir=${SQLITE3_INCLUDE_DIR}")
+    message("SQLite3 library dir=${SQLITE3_LIBRARY}")
+endif(SQLITE3_FOUND)
+
 include_directories(${SQLITE3_INCLUDE_DIRS})
 
 add_executable(Notch src/main.cpp src/Database.cpp src/Database.h)
