Added main header

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ endif(SQLITE3_FOUND)
 
 include_directories(${SQLITE3_INCLUDE_DIRS})
 
-add_executable(Ownly src/main.cpp src/Database.cpp src/Database.h)
+add_executable(Ownly src/main.cpp src/Database.cpp src/Database.h src/main.h)
 message(STATUS ${SQLite3_INCLUDE_DIRS})
 target_include_directories(Ownly PRIVATE ${SQLite3_INCLUDE_DIRS})
 target_link_libraries(Ownly Qt5::Core Qt5::Widgets SQLite3)
