Add confirmation that test ran

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ endif(SQLITE3_FOUND)
 include_directories(${SQLITE3_INCLUDE_DIRS})
 
 add_library(Catch INTERFACE)
-target_include_directories(Catch INTERFACE "include/")
+target_include_directories(Catch INTERFACE ".")
 enable_testing()
 
 add_executable(Ownly src/main.cpp src/Database.cpp src/Database.h)
@@ -36,4 +36,5 @@ target_link_libraries(Ownly Qt5::Core Qt5::Widgets SQLite3)
 
 target_include_directories(database_functions_test PRIVATE ${SQLite3_INCLUDE_DIRS})
 target_link_libraries(database_functions_test SQLite3)
+
 add_test(NAME TestDB COMMAND database_functions_test)
