--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ message("CMAKE_FIND_LIBRARY_SUFFIXES: ${CMAKE_FIND_LIBRARY_SUFFIXES}")
 
 find_package(Qt5 COMPONENTS Core Widgets REQUIRED)
 find_package(SQLite3 REQUIRED)
+find_package(Catch2 REQUIRED)
 
 if (SQLITE3_FOUND)
     include_directories(${SQLITE3_INCLUDE_DIRS})
@@ -24,10 +25,6 @@ endif(SQLITE3_FOUND)
 
 include_directories(${SQLITE3_INCLUDE_DIRS})
 
-add_library(Catch INTERFACE)
-target_include_directories(Catch INTERFACE ".")
-enable_testing()
-
 add_executable(Ownly src/main.cpp src/Database.cpp src/Database.h)
 add_executable(database_functions_test src/Database.cpp test/test-main.cpp test/test_database_functions.cpp)
 message(STATUS ${SQLite3_INCLUDE_DIRS})
@@ -36,5 +33,6 @@ target_link_libraries(Ownly Qt5::Core Qt5::Widgets SQLite3)
 
 target_include_directories(database_functions_test PRIVATE ${SQLite3_INCLUDE_DIRS})
 target_link_libraries(database_functions_test SQLite3)
-
-add_test(NAME TestDB COMMAND database_functions_test)
+include(CTest)
+include(ParseAndAddCatchTests)
+ParseAndAddCatchTests(database_functions_test)
