Add CSV write unit test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,13 +31,13 @@ include_directories(${SQLITE3_INCLUDE_DIRS})
 message(STATUS ${CMAKE_BUILD_TYPE})
 IF(CMAKE_BUILD_TYPE MATCHES Release)
     message(STATUS "Building release.")
-    add_executable(Ownly WIN32 src/main.cpp src/Database.cpp src/Database.h src/main.h)
+    add_executable(Ownly WIN32 src/main.cpp src/Database.cpp src/Database.h src/main.h src/exporters.cpp src/exporters.h)
 ELSE()
     message(STATUS "Building debug.")
-    add_executable(Ownly src/main.cpp src/Database.cpp src/Database.h src/main.h)
+    add_executable(Ownly src/main.cpp src/Database.cpp src/Database.h src/main.h src/exporters.cpp src/exporters.h)
 ENDIF()
 
-add_executable(database_functions_test src/Database.cpp test/test-main.cpp test/test_database_functions.cpp)
+add_executable(functions_test src/Database.cpp test/test-main.cpp test/test_database_functions.cpp test/test_export_functions.cpp src/exporters.cpp)
 
 add_custom_command(TARGET Ownly POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "C:/msys64/mingw64/bin/libsqlite3-0.dll" $<TARGET_FILE_DIR:Ownly>)
 add_custom_command(TARGET Ownly POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "C:/msys64/mingw64/bin/libgcc_s_seh-1.dll" $<TARGET_FILE_DIR:Ownly>)
@@ -71,8 +71,8 @@ message(STATUS ${SQLite3_INCLUDE_DIRS})
 target_include_directories(Ownly PRIVATE ${SQLite3_INCLUDE_DIRS})
 target_link_libraries(Ownly Qt5::Core Qt5::Widgets SQLite3)
 
-target_include_directories(database_functions_test PRIVATE ${SQLite3_INCLUDE_DIRS})
-target_link_libraries(database_functions_test SQLite3)
+target_include_directories(functions_test PRIVATE ${SQLite3_INCLUDE_DIRS})
+target_link_libraries(functions_test SQLite3)
 include(CTest)
 include(ParseAndAddCatchTests)
-ParseAndAddCatchTests(database_functions_test)
+ParseAndAddCatchTests(functions_test)
